# small_project

./: CMakeLists.txt  DASHBOARD_README.md  PROJECT_SUMMARY.md  README-C-CPP.md  README.md  SDS.md  SRS.md  TEST_PLAN.md  build.sh  compare  compare.cpp  dashboard.py  gui_dashboard_framework.cpp  monitor.sh  suggestions.cpp
